--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
-    "winston": "^3.17.0"
+    "pg": "^8.15.6",
+    "winston": "^3.17.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.14",
+    "@types/node": "^22.15.3",
+    "@types/pg": "^8.15.0",
+    "drizzle-kit": "^0.31.1",
     "prettier": "^3.5.3",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
