--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,19 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "pg": "^8.15.6",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/pg": "^8.15.0",
