--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "argon2": "^0.43.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
     "pg": "^8.15.6",
     "winston": "^3.17.0",
     "zod": "^3.24.3"
@@ -27,6 +30,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "@types/pg": "^8.15.0",
     "drizzle-kit": "^0.31.1",
